# eq-fuzzy

./: .gitignore  AGENTS.md  LICENSE  LICENSE-DATA.md  Makefile  OUTPUTS.md  QUICKSTART.md  README.md  README_monorepo_draft.md  REPRODUCIBILITY_NOTES.md  RUN_PRIMARY_540.md  SCRIPT_USAGE_GUIDE.md  main.py  pyproject.toml  requirements.txt  run_openrouter_manifest.py  verify_results.py
artifacts/: README.md
configs/: experiment.yaml  experiment_primary_neutral.yaml  experiment_secondary_persona.yaml  models_budget4.yaml  models_default.yaml  paper_blueprint.yaml  personas_from_definitions.yaml  personas_primary_neutral.yaml  texts_from_definitions.yaml
data/: data_dictionary.md  derived_public  interim  manifests  raw_private  results
docs/: 02_SCIS2026.md  CODEX_BOOTSTRAP_PROMPT.md  DEVELOPMENT_POLICY.md  MIGRATION_PLAN.md  MONOREPO_POLICY.md  PATH_OWNERSHIP.md  README.md  WORKSTREAMS.md  experiment_checklist.md  paper_blueprint.md  reuse_new_matrix.md  source_recheck_and_integration_2026-04-17.md
prompts/: README.md  emotion_eval_system.md  emotion_eval_system_multilingual.md  emotion_eval_user_template.md  emotion_eval_user_template_multilingual_json.md  response_schema.json
results/: csv  figures  json  tables
scripts/: README.md  build_run_manifest.py  export_primary_tables.py  export_table2_primary.py  plot_figure1_system_workflow.py  plot_figure1_system_workflow_ja.py  plot_figure2_ja_ranking.py  plot_figure3_cross_language_drift.py  prepare_human_data.py  render_prompt_preview.py  score_human_alignment.py
snapshots/: README.md
tests/: test_metrics.py  (+3 more)
(+389 files in other folders)
