[project]
name = "eq-fuzzy"
version = "0.1.0"
description = "Private monorepo for the EQ-Fuzzy research line."
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
]

[tool.uv]
package = false
